Move controls under popups, which are at z-index 5000. Fixes #334.

--- a/client/css/tilemill.css
+++ b/client/css/tilemill.css
@@ -396,7 +396,7 @@ a.zoomout {
   background-color:transparent;
   position:absolute;
   bottom:5px;
-  z-index:9999;
+  z-index:4999;
   }
 
 a.wax-fullscreen {
